Fixed search icon bug on mobile

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -142,7 +142,7 @@ header {
           padding: 5px 10px;
           border-radius: 10px;
           cursor: pointer;
-          svg {
+          div {
             svg {
               width: 25px;
               height: auto;
